Move sdk-remote out of externals.
	* sdk-remote: Move to...
	* externals/sdk-remote: here.
	* .gitmodules: Ditto.
	* bootstrap, externals/bootstrap.cfg, src/Makefile.am,
	* .gitignore: Adjust.

	* tests: Update.

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,7 @@
 	path = tests
 	url = git@core.gostai.com:urbivalid.git
 [submodule "sdk-remote"]
-	path = externals/sdk-remote
+	path = sdk-remote
 	url = git@core.gostai.com:sdk-remote.git
 [submodule "bison"]
 	path = bison
