--- a/externals/bootstrap.cfg
+++ b/externals/bootstrap.cfg
@@ -1,17 +1,16 @@
 # SDK Remote.
-subpackage: externals/sdk-remote
-external: externals/sdk-remote -> sdk-remote
-link: sdk-remote         -> externals/sdk-remote
+subpackage: sdk-remote
+external: sdk-remote -> sdk-remote
 
 # Libport.
-link: build-aux          -> sdk-remote/externals/libport/build-aux
+link: build-aux          -> sdk-remote/build-aux
 
 # Network
-link: src/lib/network/bsdnet -> sdk-remote/externals/libport/network/bsdnet
+link: src/lib/network/bsdnet -> sdk-remote/libport/network/bsdnet
 
 # Sched.
-link: src/include/sched -> sdk-remote/externals/libport/include/sched
-link: src/lib/sched -> sdk-remote/externals/libport/lib/sched
+link: src/include/sched -> sdk-remote/libport/include/sched
+link: src/lib/sched -> sdk-remote/libport/lib/sched
 
 # Libltdl
 link: src/include/libltdl -> sdk-remote/libltdl
