--- a/configure.ac
+++ b/configure.ac
@@ -99,8 +99,9 @@ AC_DEFINE_UNQUOTED([URBI_PATH],
 # request, since the rest of the dev team might not have Boost 1.35.
 # So require it here.
 BOOST_REQUIRE([1.35])
-# done by liburbi URBI_LIBPORT
-# URBI_LIBPORT calls the Boost macros first, so keep other Boost stuff below.
+# URBI_LIBPORT calls the Boost macros first, so keep other Boost stuff
+# below.
+URBI_LIBPORT([sdk-remote/libport])
 URBI_PTHREAD
 URBI_SOCKETS
 
