Update SDK Remote.
	* sdk-remote: Update.
	* Makefile.am: Adjust paths.
	* src/console-server.cc, src/kernel/userver.cc: program_name is
	now a function.

--- a/Makefile.am
+++ b/Makefile.am
@@ -40,12 +40,12 @@ symbols:
 
 # Don't bounce to libs: sort of loop unrolling.
 core:
-	$(MAKE) $(AM_MAKEFLAGS) -C sdk-remote/lib/libport
+	$(MAKE) $(AM_MAKEFLAGS) -C sdk-remote/libport
 	$(MAKE) $(AM_MAKEFLAGS) -C sdk-remote/src core
 	$(MAKE) $(AM_MAKEFLAGS) -C src libuobject.la urbi-console$(EXEEXT)
 
 libs:
-	$(MAKE) $(AM_MAKEFLAGS) -C sdk-remote/lib/libport
+	$(MAKE) $(AM_MAKEFLAGS) -C sdk-remote/libport
 	$(MAKE) $(AM_MAKEFLAGS) -C sdk-remote/src libs
 	$(MAKE) $(AM_MAKEFLAGS) -C src libuobject.la
 
