--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 /src/lib
 /src/object/any-to-boost-function.hxx
 /src/object/cxx-primitive.hxx
+/src/object/executable.hh
 /src/object/precompiled-symbols.hh
 /src/object/precompiled-symbols.stamp
 /src/object/symbols.hh.old
