Clean up the doc.
	* doc/Makefile.am (EXTRA_DIST): Ship the img/ files.
	* doc/specs/document-aux, doc/specs/img, doc/tutorial/document-aux,
	* doc/tutorial/img: Remove.
	Useless since we pass -I to texi2dvi.
	* doc/specs/lang.tex: Fixes.
	* doc/tests/local.mk (TEST_SUITE_LOG): Define.
	(EXTRA_DIST): Ship test.u.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -9,6 +9,9 @@ include document-aux/make/tex.mk
 EXTRA_DIST +=								   \
   $(addprefix document-aux/,$(call ls_files_in_dir,$(srcdir)/document-aux))
 
+# img/.
+EXTRA_DIST += $(call ls_files,img/*.pdf)
+
 # Find urbi-report.sty.
 TEXI2DVI_FLAGS += -I $(srcdir)
 pdf_DATA =
