--- a/sdk-remote/include/urbi/ucallbacks.hh.template
+++ b/sdk-remote/include/urbi/ucallbacks.hh.template
@@ -4,7 +4,7 @@
  Definition of the callback classes.
 
  This file is part of UObject Component Architecture\n
- Copyright (c) 2006, 2007, 2008 Gostai S.A.S.
+ Copyright (c) 2006, 2007, 2008, 2009 Gostai S.A.S.
 
  Permission to use, copy, modify, and redistribute this software for
  non-commercial use is hereby granted.
@@ -47,17 +47,23 @@ namespace urbi
     virtual ~UGenericCallback();
 
     void registerCallback(UTable& t);
-    std::string getName() { return name;};
 
-    virtual UValue __evalcall(UList &param)  = 0;
+    const std::string& getName() const
+    {
+      return name;
+    }
+
+    virtual UValue __evalcall(UList& param)  = 0;
 
     /// Used to store the UVar* pointeur for var monitoring.
     void* storage;
     /// Period of timers.
     ufloat period;
+
     /// Nb params of the callbacked function.
-    int    nbparam;
-    /// Name of the UObject that has created the callback.
+    int nbparam;
+
+    /// Name of the UObject that created the callback.
     std::string objname;
 
   private:
@@ -76,7 +82,7 @@ namespace urbi
   template <class OBJ, class R%%, class P% %%>
   class UCallback%N% : public UGenericCallback
   {
-    public:
+  public:
 
 # define MKUCallBackNotifyCtr%N%(Const, IsConst)			\
       UCallback%N%(const std::string& objname, const std::string& type,	\
@@ -107,7 +113,7 @@ namespace urbi
       return res;
     }
 
-    private:
+  private:
     OBJ* obj;
     R (OBJ::*fun)      (%%%,% P% %%);
     R (OBJ::*funconst) (%%%,% P% %%) const;
@@ -119,7 +125,7 @@ namespace urbi
   template <class OBJ%%, class P% %%>
   class UCallbackvoid%N% : public UGenericCallback
   {
-    public:
+  public:
     UCallbackvoid%N%(const std::string& objname, const std::string& type,
 		     OBJ* obj,
 		     void (OBJ::*fun) (%%%,% P% %%),
@@ -137,7 +143,7 @@ namespace urbi
       ((*obj).*fun)(%%%,% uvalue_cast<P%>(param[% - 1]) %%);
       return UValue();
     }
-    private:
+  private:
     OBJ* obj;
     void (OBJ::*fun) (%%%,% P% %%);
   };
@@ -148,7 +154,7 @@ namespace urbi
   template <class OBJ%%, class P% %%>
   class UCallbacknotifyend%N% : public UGenericCallback
   {
-    public:
+  public:
 
 # define MKUCallBackNotifyEndCtr%N%(FConst, EConst, IsConst)		\
       UCallbacknotifyend%N%(const std::string& objname,			\
@@ -179,7 +185,7 @@ namespace urbi
       return res;
     }
 
-    private:
+  private:
     OBJ* obj;
     void (OBJ::*fun) ();
     void (OBJ::*func) ();
@@ -191,7 +197,7 @@ namespace urbi
   template <class INU %%, class P% %%>
   class UFCallbackvoid%N% : public UGenericCallback
   {
-    public:
+  public:
     UFCallbackvoid%N%(const std::string& objname, const std::string& type,
 		      void (*fun) (%%%,% P% %%),
 		    const std::string& funname, UTable &t, bool owned)
@@ -208,7 +214,7 @@ namespace urbi
       return UValue();
     }
 
-    private:
+  private:
     void (*fun) (%%%,% P% %%);
   };
 
