Clean semaphores before running bf-tests.

--- a/Makefile.am
+++ b/Makefile.am
@@ -70,6 +70,7 @@ libs:
 .PHONY: check-buildfarm check-sdk-uobjects-buildfarm
 CHECK_BUILDFARM_FLAGS = AM_COLOR_TESTS=no VERBOSE=1 INSTRUMENT=1
 check-buildfarm:
+	-$(build_aux_dir)/semaphore-clean.sh
 	$(MAKE) $(AM_MAKEFLAGS) -C tests check-html $(CHECK_BUILDFARM_FLAGS)
 
 # The target used by the build farm to create the uobjects used in our
