Do not install *.la files.
Well, actually, remove them.

	* Makefile.am (install-exec-hook): New.

--- a/Makefile.am
+++ b/Makefile.am
@@ -121,3 +121,29 @@ all.stamp: urbi.stamp libraries.stamp executables.stamp
 stamps: $(STAMPS)
 noinst_DATA = $(STAMPS)
 CLEANFILES += $(STAMPS)
+
+
+## ---------------------------------- ##
+## Workaround libtool under windows.  ##
+## ---------------------------------- ##
+
+# Our trick, defining libdir = ${bindir} so that under Windows the
+# dlls are found where expected, does not work perfectly.  In
+# particular libtool might issue an *.la containing:
+#
+# # The name that we can dlopen(3).
+# dlname='../bin/libuobject.dll'
+#
+# and dlopen fails.  Note that "../bin" is useless, we just got out
+# of bin, and enter again.  If we remove this indirection, everything
+# works.  If we remove the la file, ltdl find the *.dll file and again,
+# it works.  It seems that fixing the *.la file will be trick, and it
+# has been reported several times that installing *.la files makes no
+# sense.  Yet, I (Akim), am a bit worried of getting rid of the *.la
+# files, they can be useful later.
+#
+# In which case it will be simple to resurect them.
+#
+# First try simple things.  Get rid of *.la files.
+install-exec-hook:
+	-find $(DESTDIR)$(libdir) -name '*.la' | xargs rm -rf
