Disable instrumentation for the BF.
	* src/tests/Makefile.am: here.

--- a/sdk-remote/src/tests/Makefile.am
+++ b/sdk-remote/src/tests/Makefile.am
@@ -36,7 +36,7 @@ bin/urbi-launch$(EXEEXT): bin/urbi-launch.in
 	chmod +x $@
 
 # By default, instrument the code.
-INSTRUMENT = true
+#INSTRUMENT = true
 URBI_SERVER = urbi-launch$(EXEEXT) --start --
 
 ## ------------------- ##
@@ -81,7 +81,7 @@ debug:
 ## ----------- ##
 
 # The target run by the buildfarm.
-CHECK_BUILDFARM_FLAGS = -j4 AM_COLOR_TESTS=no VERBOSE=1 INSTRUMENT=1
+CHECK_BUILDFARM_FLAGS = -j4 AM_COLOR_TESTS=no VERBOSE=1 # INSTRUMENT=1
 check-buildfarm:
 	$(MAKE) $(AM_MAKEFLAGS) $(CHECK_BUILDFARM_FLAGS) check-html
 
