Use distcheck-buildfarm.
	* libport: Provide it.
	* Makefile.am: Use it.

--- a/sdk-remote/Makefile.am
+++ b/sdk-remote/Makefile.am
@@ -2,6 +2,8 @@ include build-aux/init.mk
 include build-aux/build-aux.mk
 include build-aux/package-version.mk
 include build-aux/fix-libtool-la.mk
+include build-aux/build-farm.mk
+
 AUTOMAKE_OPTIONS += subdir-objects
 ACLOCAL_AMFLAGS = -I build-aux -I sdk
 
