--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,7 @@
 include build-aux/init.mk
 include build-aux/package-version.mk
 include build-aux/build-aux.mk
+include build-aux/build-farm.mk
 
 ACLOCAL_AMFLAGS = -I build-aux -I tests/m4
 
