--- a/sdk-remote/src/tests/Makefile.am
+++ b/sdk-remote/src/tests/Makefile.am
@@ -85,3 +85,6 @@ CHECK_BUILDFARM_FLAGS = -j4 AM_COLOR_TESTS=no VERBOSE=1 # INSTRUMENT=1
 check-buildfarm:
 	$(MAKE) $(AM_MAKEFLAGS) $(CHECK_BUILDFARM_FLAGS) check-html
 
+.PHONY check-TESTS: check-clean-semaphores
+check-clean-semaphores:
+	-$(build_aux_dir)/semaphore-clean.sh
