--- a/configure.ac
+++ b/configure.ac
@@ -120,6 +120,8 @@ URBI_TESTS
 
 AC_CONFIG_FILES([Makefile src/Makefile])
 AC_CONFIG_FILES([scripts/package], [chmod +x scripts/package])
+AC_CONFIG_FILES([scripts/urbi-console.bat],
+                [chmod +x scripts/urbi-console.bat])
 AC_CONFIG_HEADERS([src/kernel/config.h])
 
 AC_OUTPUT
