--- a/configure.ac
+++ b/configure.ac
@@ -123,5 +123,5 @@ AC_CONFIG_FILES([scripts/package], [chmod +x scripts/package])
 AC_CONFIG_FILES([scripts/urbi-console.bat],
                 [chmod +x scripts/urbi-console.bat])
 AC_CONFIG_HEADERS([src/kernel/config.h])
-
+AC_CONFIG_FILES([share/urbi/platform.u])
 AC_OUTPUT
