doc: fuse the tutorial and the specs into a single document.
	Move the body of the specs and the tutorial is input'able files.
	* doc/specs/urbi-specs.tex: Move body into...
	* doc/specs/specs.tex: this new file.
	* doc/tutorial/urbi-tutorial.tex: Move body into...
	* doc/tutorial/tutorial.tex: this new file.

	* doc/tutorial/local.mk, doc/specs/local.mk: No longer compile the
	tutortial and the specs by default.
	* doc/urbi-sdk.tex: New.
	* doc/Makefile.am: Compile it.

	* doc/specs/list.tex, doc/specs/stdlib.tex: Formatting changes.
	Qualify the path in the \inputs.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -20,6 +20,19 @@ include specs/local.mk
 include tutorial/local.mk
 include tests/local.mk
 
+
+## ------------ ##
+## urbi-sdk.pdf ##
+## ------------ ##
+
+pdf_DATA += urbi-sdk.pdf
+urbi_sdk_sources = $(call ls_files,*.tex)
+urbi_sdk_deps = $(urbi_sdk_sources) $(call ls_files,*.sty)
+EXTRA_DIST += $(urbi_sdk_deps) $(urbi_sdk_deps)
+urbi-sdk.pdf: $(urbi_sdk_deps)
+debug:
+	echo $(urbi_sdk_deps)
+
 CLEANFILES += $(pdf_DATA)
 
 view: $(pdf_DATA)
