--- a/scripts/package.in
+++ b/scripts/package.in
@@ -97,12 +97,12 @@ done
 if $release_mode && [ "$OS" != windows ]; then
   (cd "$packagedir"
    # Do not show errors -- we know that we have shell scripts there.
-   find bin -type f -print | xargs strip 2> /dev/null || true
-   find . -type f -name '*.so.*' -print | xargs strip || true
-   find . -type f -name '*.a' -print | xargs strip || true)
+   $FIND bin -type f -print | xargs strip 2> /dev/null || true
+   $FIND . -type f -name '*.so.*' -print | xargs strip || true
+   $FIND . -type f -name '*.a' -print | xargs strip || true)
 fi
 
 # On Windows, copy the .bat file
 if [ "$OS" = windows ]; then
-  $CP "${srcdir}/scripts/urbi-console.bat" "$packagedir"
+  $CP "$builddir/scripts/urbi-console.bat" "$packagedir"
 fi
