urbi-console -> urbi.
And also move the binaries from src to src/bin, at least to avoid the
clashes bw src/urbi which is a directory, and src/urbi, formerly
known as urbi-console.

	* KNOWN_BUGS: Remove, obsolete and unused.

	* scripts/urbi-console.bat.in: Rename as...
	* scripts/urbi.bat.in: this.
	* src/urbi-console.cc: Rename as...
	* src/bin/urbi.cc: this.
	* src/ast-dump.cc: Rename as...
	* src/bin/ast-dump.cc: this.

	* src/Makefile.am, tests, Makefile.am, configure.ac,
	* doc/QUICK-START.txt, doc/RELEASE-NOTES.txt,
	* doc/REPORTING-BUGS.txt, doc/installation.tex,
	* doc/specs/lang.tex, doc/tutorial/tutorial.tex,
	* scripts/package.in, tests-local.mk:
	Adjust.

--- a/Makefile.am
+++ b/Makefile.am
@@ -54,7 +54,7 @@ BUILT_SOURCES +=				\
 core:
 	$(MAKE) $(AM_MAKEFLAGS) -C sdk-remote/libport
 	$(MAKE) $(AM_MAKEFLAGS) -C sdk-remote/src core
-	$(MAKE) $(AM_MAKEFLAGS) -C src libuobject.la urbi-console$(EXEEXT)
+	$(MAKE) $(AM_MAKEFLAGS) -C src libuobject.la bin/urbi$(EXEEXT)
 
 libs:
 	$(MAKE) $(AM_MAKEFLAGS) -C sdk-remote/libport
@@ -110,7 +110,7 @@ libraries.stamp: src/libuobject.la sdk-remote/src/libuobject/libuobject.la sdk-r
 
 # All the executables.
 STAMPS += executables.stamp
-executables.stamp: src/urbi-console$(EXEEXT) sdk-remote/src/urbi-launch$(EXEEXT)
+executables.stamp: src/bin/urbi$(EXEEXT) sdk-remote/src/urbi-launch$(EXEEXT)
 	@echo "$$(date): $?" >>$@
 
 # Everything.
