doc: add license.
	* doc/LICENSE.txt: New.
	* scripts/package.in: Install it.
	* doc/Makefile.am: Ship and install the public text documents.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -20,6 +20,16 @@ include specs/local.mk
 include tutorial/local.mk
 include tests/local.mk
 
+## ------------------------------- ##
+## Additional text documentation.  ##
+## ------------------------------- ##
+
+doc_DATA = 					\
+  doc/LICENSE.txt				\
+  doc/QUICK-START.txt				\
+  doc/README.txt				\
+  doc/RELEASE-NOTES.txt				\
+  doc/REPORTING-BUGS.txt
 
 ## ------------ ##
 ## urbi-sdk.pdf ##
