package: keep the version.
Our packages are name "urbi-sdk-rc-1" instead of "urbi-sdk-2.0-rc-1" :(
This is because up to now the "-2.0" part was actually part of $PACKAGE
instead of $version.

	* scripts/package.in ($version): Just strip 'preview/'.
	Convert slashes to dashes.

--- a/scripts/package.in
+++ b/scripts/package.in
@@ -64,7 +64,7 @@ esac
 
 # Determine the version from the latest component of the tag. This will
 # ease ordering.
-version=$(cd "$srcdir" && $GIT describe | $SED -e "s,^.*/,,")
+version=$(cd "$srcdir" && $GIT describe | $SED -e "s,^preview/,,;s,/,-,g")
 # If we are in release mode, do not tell it, the final users won't care
 if $release_mode; then
   name="${PROJECT}-${version}-${OS}-${ARCH}-${COMP}"
