doc: generate the eps pictures.
	* doc/Makefile.am: Build the pictures in eps.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -11,7 +11,10 @@ EXTRA_DIST +=								   \
   $(addprefix document-aux/,$(call ls_files_in_dir,$(srcdir)/document-aux))
 
 # img/.
-EXTRA_DIST += $(call ls_files,img/*.pdf)
+PDF_IMAGES = $(call ls_files,img/*.pdf)
+EXTRA_DIST += $(PDF_IMAGES)
+EPS_IMAGES = $(PDF_IMAGES:.pdf=.eps)
+CLEANFILES += $(EPS_IMAGES)
 
 # Find urbi-report.sty.
 TEXI2DVI_FLAGS += -I $(srcdir)
@@ -40,17 +43,21 @@ dist_doc_DATA =					\
 ## -------------- ##
 
 pdf_DATA += urbi-sdk.pdf
+CLEANFILES += $(pdf_DATA)
 urbi_sdk_sources = $(call ls_files,*.tex)
 REVISION_FILE = revision.sty
 REVISIONFLAGS = --latex
 urbi_sdk_deps = $(urbi_sdk_sources) $(call ls_files,*.sty) $(REVISION_FILE)
 EXTRA_DIST += $(urbi_sdk_sources)
 urbi-sdk.dvi urbi-sdk.html urbi-sdk.pdf: $(urbi_sdk_deps)
-
-CLEANFILES += $(pdf_DATA)
+urbi-sdk.dvi urbi-sdk.html: $(EPS_FIGS)
 
 view: $(pdf_DATA)
 	xpdf $<
+
+%.eps: %.pdf
+	-mkdir -p $(dir $@)
+	convert $< $@
 
 # Convert some old LaTeX 2.09 idioms into 2e.
 latex2e:
